codemp/generated/game/g_trigger.h

void InitTrigger( gentity_t *self );
void multi_wait( gentity_t *ent );
void multi_trigger_run( gentity_t *ent );
qboolean G_NameInTriggerClassList( char *list, char *str );
void multi_trigger( gentity_t *ent, gentity_t *activator );
void Use_Multi( gentity_t *ent, gentity_t *other, gentity_t *activator );
void Touch_Multi( gentity_t *self, gentity_t *other, trace_t *trace );
void trigger_cleared_fire( gentity_t *self );
void SP_trigger_multiple( gentity_t *ent );
void SP_trigger_once( gentity_t *ent );
void Do_Strike( gentity_t *ent );
void Think_Strike( gentity_t *ent );
void Use_Strike( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_trigger_lightningstrike( gentity_t *ent );
void trigger_always_think( gentity_t *ent );
void SP_trigger_always( gentity_t *ent );
void trigger_push_touch( gentity_t *self, gentity_t *other, trace_t *trace );
void AimAtTarget( gentity_t *self );
void SP_trigger_push( gentity_t *self );
void Use_target_push( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_push( gentity_t *self );
void trigger_teleporter_touch( gentity_t *self, gentity_t *other, trace_t *trace );
void SP_trigger_teleport( gentity_t *self );
void hurt_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void hurt_touch( gentity_t *self, gentity_t *other, trace_t *trace );
void SP_trigger_hurt( gentity_t *self );
void space_touch( gentity_t *self, gentity_t *other, trace_t *trace );
void SP_trigger_space( gentity_t *self );
void shipboundary_touch( gentity_t *self, gentity_t *other, trace_t *trace );
void shipboundary_think( gentity_t *ent );
void SP_trigger_shipboundary( gentity_t *self );
void hyperspace_touch( gentity_t *self, gentity_t *other, trace_t *trace );
void SP_trigger_hyperspace( gentity_t *self );
void func_timer_think( gentity_t *self );
void func_timer_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_func_timer( gentity_t *self );
gentity_t *asteroid_pick_random_asteroid( gentity_t *self );
int asteroid_count_num_asteroids( gentity_t *self );
void asteroid_field_think( gentity_t *self );
void SP_trigger_asteroid_field( gentity_t *self );